@@ -77,6 +77,8 @@
 #undef HAVE_GETMAGICKINFOARRAY
 /* Introduced in IM 6.0.1 */
 #undef HAVE_GETMAGICKINFOLIST
+/* Introduced in IM 6.1.5 */
+#undef HAVE_GETMULTILINETYPEMETRICS
 /* API changed in IM 6.1.3 */
 #undef HAVE_OLD_GETMAGICKINFOLIST
 #undef HAVE_GETNEXTIMAGEINLIST
