@@ -2,6 +2,7 @@ RMagick 1.7.0
     o Added splice method to Image class (ImageMagick 6.0.0)
     o Added set_channel_depth to Image class (ImageMagick 6.0.0)
     o Added blur_channel to Image class (ImageMagick 6.0.1)
+    o Added get_multiline_type_metrics to Draw class (ImageMagick 6.1.5)
     o Fixed bug #1048, memory leak in Image#to_blob
 
 RMagick 1.6.1
